--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
-    "prisma": "5.15.1"
+    "@rocketseat/eslint-config": "2.2.2",
+    "@types/node": "20.14.8",
+    "prisma": "5.15.1",
+    "tsup": "8.1.0",
+    "tsx": "4.15.7",
+    "typescript": "5.5.2",
+    "vite-tsconfig-paths": "4.3.2"
   }
 }
