feat: prepare user useCase and tests environment

--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     },
     "devDependencies": {
         "@rocketseat/eslint-config": "2.2.2",
+        "@types/bcryptjs": "2.4.6",
         "@types/node": "20.14.8",
+        "@types/supertest": "6.0.2",
+        "@vitest/coverage-v8": "1.6.0",
+        "@vitest/ui": "1.6.0",
         "eslint": "8.57.0",
         "eslint-config-standard-with-typescript": "43.0.1",
         "eslint-plugin-import": "2.29.1",
@@ -33,9 +37,11 @@
         "eslit": "6.0.0",
         "prettier": "3.3.2",
         "prisma": "5.16.1",
+        "supertest": "7.0.0",
         "tsup": "8.1.0",
         "tsx": "4.15.7",
         "typescript": "5.5.2",
-        "vite-tsconfig-paths": "4.3.2"
+        "vite-tsconfig-paths": "4.3.2",
+        "vitest": "1.6.0"
     }
 }
