--- a/package.json
+++ b/package.json
@@ -4,19 +4,22 @@
   "main": "index.js",
   "repository": "git@github.com:robrunodev/find-a-friend-api.git",
   "author": "Rodrigo Bruno <ro_web1@hotmail.com>",
-  "_moduleAliases": {
-    "@/*": "./src/*"
-  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
+    "start": "node build/server.js",
     "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
     "test:install-prisma-environment": "npm link vitest-environment-prisma",
-    "test:in-memory-test": "vitest run --dir src/use-cases",
-    "test:watch:in-memory-test": "vitest --dir src/use-cases",
-    "test": "vitest run --dir src/http",
-    "test:watch": "vitest --dir src/http",
+    "build": "tsup src --out-dir build",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
+  },
+  "_moduleAliases": {
+    "@/*": "./src/*"
   },
   "license": "MIT",
   "dependencies": {
@@ -31,25 +34,25 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
-    "@rocketseat/eslint-config": "2.2.2",
+    "@rocketseat/eslint-config": "2.1.0",
     "@types/bcryptjs": "2.4.6",
-    "@types/node": "20.14.8",
+    "@types/node": "^20.8.9",
     "@types/supertest": "6.0.2",
-    "@vitest/coverage-v8": "1.6.0",
-    "@vitest/ui": "1.6.0",
-    "eslint": "8.57.0",
-    "eslint-config-standard-with-typescript": "43.0.1",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-n": "16.6.2",
-    "eslint-plugin-promise": "6.2.0",
-    "eslit": "6.0.0",
-    "prettier": "3.3.2",
-    "prisma": "5.16.1",
-    "supertest": "7.0.0",
-    "tsup": "8.1.0",
-    "tsx": "4.15.7",
-    "typescript": "5.5.2",
-    "vite-tsconfig-paths": "4.3.2",
-    "vitest": "1.6.0"
+    "@typescript-eslint/eslint-plugin": "6.9.1",
+    "@vitest/coverage-v8": "0.34.6",
+    "@vitest/ui": "0.34.6",
+    "eslint": "8.52.0",
+    "eslint-plugin-import": "2.29.0",
+    "eslint-plugin-n": "16.2.0",
+    "eslint-plugin-promise": "6.1.1",
+    "npm-run-all": "4.1.5",
+    "prettier": "3.0.3",
+    "prisma": "5.17.0",
+    "supertest": "6.3.4",
+    "tsup": "^7.2.0",
+    "tsx": "^3.14.0",
+    "typescript": "5.2.2",
+    "vite-tsconfig-paths": "4.2.1",
+    "vitest": "0.34.6"
   }
 }
